--- a/certificate.html
+++ b/certificate.html
@@ -151,10 +151,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Hetvi Khavadiya. All rights reserved.</p>
+            <p>&copy; 2024 dhruvi kakadia. All rights reserved.</p>
             <div class="footer-links">
-                <a href="https://github.com/Hetvikhavadiya/github-workshop" target="_blank" rel="noopener">
-                    <img src="https://img.shields.io/badge/View%20on-GitHub-181717?style=for-the-badge&logo=github" alt="View on GitHub">
+                <a href="https://github.com/Dkhub23/github-workshop" target="_blank" rel="noopener">
+                    <img src="https://github.com/Dkhub23" alt="View on GitHub">
                 </a>
             </div>
         </div>
