--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Me">
-    <title>Contact - hetvi</title>
+    <title>Contact - DHRUVI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="index.html">hetvi</a>
+                <a href="index.html">DHRUVI</a>
             </div>
             
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -47,8 +47,8 @@
                     <div class="contact-card">
                         <div class="contact-icon">📧</div>
                         <h3>Email</h3>
-                        <a href="mailto:25cs033@charusat.edu.in" class="contact-link">
-                            25cs033@charusat.edu.in
+                        <a href="mailto:25cs025@charusat.edu.in" class="contact-link">
+                            25cs025@charusat.edu.in
                         </a>
                         <p>Send me an email anytime!</p>
                     </div>
@@ -57,8 +57,8 @@
                     <div class="contact-card">
                         <div class="contact-icon">💼</div>
                         <h3>LinkedIn</h3>
-                        <a href="https://www.linkedin.com/in/hetvi-khavadiya-828739377?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener" class="contact-link">
-                            linkedin.com/in/hetvi-khavadiya
+                        <a href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQFXaYlBKXdHawAAAZqswIr4R05C6bC38ydXBef4AjrDmdahlyQ2d-Lh6bRQ22GKv4PyB-K10b4zyDiSI4tywFuyriD6qNMrg-YOcHE0xetKcG7yNuJv1EcVqaRqUyfMc23Koo4=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdhruvi-kakadia-274378374%3Futm_source%3Dshare%26utm_campaign%3Dshare_via%26utm_content%3Dprofile%26utm_medium%3Dandroid_app">
+                            linkedin.com/in/Dhruvi-kakadia
                         </a>
                         <p>Let's connect professionally</p>
                     </div>
@@ -67,8 +67,8 @@
                     <div class="contact-card">
                         <div class="contact-icon">💻</div>
                         <h3>GitHub</h3>
-                        <a href="https://github.com/Hetvikhavadiya/github-workshop" target="_blank" rel="noopener" class="contact-link">
-                            github.com/Hetvikhavadiya
+                        <a href="https://github.com/Dkhub23/github-workshop" target="_blank" rel="noopener" class="contact-link">
+                            github.com/Dkhub23
                         </a>
                         <p>Check out my code</p>
                     </div>
@@ -101,10 +101,10 @@
             <div class="social-section">
                 <h2>Connect With Me</h2>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/hetvi-khavadiya-828739377?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"/>
+                    <a href="/>
                         </svg>
                     </a>
-                    <a href="https://github.com/Hetvikhavadiya/github-workshop" target="_blank" rel="noopener" aria-label="GitHub">
+                    <a href="https://github.com/Dkhub23/github-workshop" target="_blank" rel="noopener" aria-label="GitHub">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                         </svg>
@@ -119,9 +119,9 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Hetvi Khavadiya. All rights reserved.</p>
+            <p>&copy; 2025 DHRUVI KAKADIA. All rights reserved.</p>
             <div class="footer-links">
-                <a href="https://github.com/Hetvikhavadiya/github-workshop" target="_blank" rel="noopener">
+                <a href="https://github.com/Dkhub23/github-workshop" target="_blank" rel="noopener">
                     <img src="https://img.shields.io/badge/View%20on-GitHub-181717?style=for-the-badge&logo=github" alt="View on GitHub">
                 </a>
             </div>
