--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Skills and Projects">
-    <title>Skills &amp; Projects - hetvi</title>
+    <title>Skills &amp; Projects - DHRUVI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="index.html">hetvi</a>
+                <a href="index.html">DHRUVI</a>
             </div>
             
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -181,7 +181,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Hetvi Khavadiya. All rights reserved.</p>
+            <p>&copy; 2025 DHRUVI KAKADIA. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://github.com/Hetvikhavadiya/github-workshop" target="_blank" rel="noopener">
                     <img src="https://img.shields.io/badge/View%20on-GitHub-181717?style=for-the-badge&logo=github" alt="View on GitHub">
