--- a/certificate.html
+++ b/certificate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Certificates and Achievements">
-    <title>Certificates - Hetvi</title>
+    <title>Certificates - DHRUVI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -151,7 +151,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 dhruvi kakadia. All rights reserved.</p>
+            <p>&copy; 2025 dhruvi kakadia. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://github.com/Dkhub23/github-workshop" target="_blank" rel="noopener">
                     <img src="https://github.com/Dkhub23" alt="View on GitHub">
