--- a/certificate.html
+++ b/certificate.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="index.html">hetvi</a>
+                <a href="index.html">dhruvi</a>
             </div>
             
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Skills & Projects</a></li>
-                <li><a href="certi.html" class="active">Certificates</a></li>
+                <li><a href="certificate.html" class="active">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
