--- a/certi.html
+++ b/certi.html
@@ -24,7 +24,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Skills & Projects</a></li>
-                <li><a href="certificate.html" class="active">Certificates</a></li>
+                <li><a href="certi.html" class="active">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
