--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="project.html">Skills & Projects</a></li>
-                <li><a href="certificate.html">Certificates</a></li>
+                <li><a href="certi.html">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
